# gascii

./: .gitignore  7_18_TODOS.md  CONTEXT.md  Cargo.toml  LICENSE
docs/: architecture_and_requirements.md
docs/adr/: 0001-native-rust-egui.md  0002-cell-model-fg-bg-truecolor.md  0003-curated-palette-pages.md  0004-intensity-not-pressure.md  0005-native-format-json.md  0006-layers-in-model-day-one.md  0007-blank-is-alpha.md  0008-bundle-iosevka-fixed.md
gascii/: Cargo.toml
gascii-core/: Cargo.toml
gascii-core/src/: brush.rs  clear.rs  clipboard.rs  edit.rs  join.rs  lib.rs  model.rs  palette.rs  resize.rs
gascii-core/src/io/: export_png.rs  export_text.rs  gascii_json.rs  mod.rs
gascii-core/src/tools/: density_brush.rs  eraser.rs  fill.rs  line.rs  mod.rs  pencil.rs  rect.rs  select.rs  text.rs
gascii-core/tests/: close_confirm_integration.rs  document_integration.rs  draw_integration.rs  feel_integration.rs  persist_integration.rs  redesign_round2_integration.rs  structure_integration.rs
gascii-designs-v1/: .thumbnail  GASCII Design Spec.dc.html  GASCII Redesign.dc.html  GASCII Workflows.dc.html
gascii/assets/fonts/: README.md
gascii/src/: app.rs  canvas.rs  font_coverage.rs  fonts.rs  image_bg.rs  main.rs  png_export.rs  prefs.rs  torture.rs  viewport.rs
gascii/src/ui/: dialog.rs  icons.rs  kiosk.rs  mod.rs  options_bar.rs  sidebar.rs  status_bar.rs  theme.rs  titlebar.rs  widgets.rs
gascii/tests/: spike_cli_integration.rs
