[workspace]
resolver = "2"
members = ["gascii-core", "gascii"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2.2"
eframe = "0.35"
rfd = "0.17"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
