[workspace]
resolver = "2"
members = ["gascii-core", "gascii"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2.2"
eframe = { version = "0.35", features = ["persistence"] }
rfd = "0.17"
arboard = "3"
ctrlc = "3"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
