[package]
name = "gascii"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gascii-core = { path = "../gascii-core" }
eframe = { workspace = true }

[dev-dependencies]
ttf-parser = "0.25" # test-only glyph-coverage backstop for the bundled canvas font

[lints]
workspace = true
