[package]
name = "gascii"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gascii-core = { path = "../gascii-core" }
eframe = { workspace = true }
rfd = { workspace = true }
fontdue = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
ctrlc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
ttf-parser = "0.25" # test-only glyph-coverage backstop for the bundled canvas font

[lints]
workspace = true
